<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Inicio das perguntas -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/fontQuestion"
                    android:text="@string/userStudy_agoraNao"/>


                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:id="@+id/agoraNao_text"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:maxLength="10" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    style="@style/fontAnswer"
                    android:text="@string/userStudy_agoraNao_label"/>

                <TextView
                    style="@style/fontAnswer"
                    android:text="Horário"
                    android:layout_marginLeft="100dp" />

            </LinearLayout>


                <Button
                    style="@style/button"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_enviar"
                    android:id="@+id/button_agoraNao1"
                    android:layout_gravity="left|center_vertical"
                    android:allowUndo="false"
                    android:layout_marginLeft="225dp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>